  to add this keyword argument, the debug methods will fail silently,
  behaving as they did previously.

- Fixed traceback trimming, and added ParserElement.verbose_traceback
  save/restore to reset_pyparsing_context().

- Default string for Word expressions now also include indications of
  min and max length specification, if applicable, similar to regex length
  specifications:

        Word(nums)               -> "W:(0-9)"
        Word(nums, exact=3)      -> "W:(0-9){3}"
        Word(nums, min=2)        -> "W:(0-9){2,...}"
        Word(nums, max=3)        -> "W:(0-9){1,3}"
        Word(nums, min=2, max=3) -> "W:(0-9){2,3}"

- Removed copy() override in Keyword class which did not preserve definition
  of ident chars from the original expression. PR #233 submitted by jgrey4296,
  thanks!


Version 3.0.0a2 - June, 2020
----------------------------
- Summary of changes for 3.0.0 can be found in "What's New in Pyparsing 3.0.0"
  documentation.

- API CHANGE
  Changed result returned when parsing using countedArray,
  the array items are no longer returned in a doubly-nested
  list.

- An excellent new enhancement is the new railroad diagram
  generator for documenting pyparsing parsers:

        import pyparsing as pp
        from pyparsing.diagram import to_railroad, railroad_to_html
        from pathlib import Path

        # define a simple grammar for parsing street addresses such
        # as "123 Main Street"
        #     number word...
        number = pp.Word(pp.nums).setName("number")
        name = pp.Word(pp.alphas).setName("word")[1, ...]

        parser = number("house_number") + name("street")
        parser.setName("street address")

        # construct railroad track diagram for this parser and
        # save as HTML
        rr = to_railroad(parser)
        Path('parser_rr_diag.html').write_text(railroad_to_html(rr))

  Very nice work provided by Michael Milton, thanks a ton!

- Enhanced default strings created for Word expressions, now showing