@@ -29,15 +29,25 @@ Version 3.0.0b1
   min and max length specification, if applicable, similar to regex length
   specifications:
 
+        Word(alphas)             -> "W:(A-Za-z)"
         Word(nums)               -> "W:(0-9)"
         Word(nums, exact=3)      -> "W:(0-9){3}"
         Word(nums, min=2)        -> "W:(0-9){2,...}"
         Word(nums, max=3)        -> "W:(0-9){1,3}"
         Word(nums, min=2, max=3) -> "W:(0-9){2,3}"
 
+  For expressions of the Char class (similar to Word(..., exact=1), the expression
+  is simply the character range in parentheses:
+
+        Char(nums)               -> "(0-9)"
+        Char(alphas)             -> "(A-Za-z)"
+
 - Removed copy() override in Keyword class which did not preserve definition
   of ident chars from the original expression. PR #233 submitted by jgrey4296,
   thanks!
+
+- In addition to pyparsing.__version__, there is now also a pyparsing.__version_info__,
+  following the same structure and names as in sys.version_info.
 
 
 Version 3.0.0a2 - June, 2020
